make us repeat the plot names... The custom theme_animint() function
is implemented in R/theme.R and does not call validate_element, but
ggplot2 still calls validate_element when the non-standard theme is
added to the ggplot, resulting in an error. Waiting to come to an
agreement with ggplot2
developers. https://github.com/hadley/ggplot2/issues/938

2014.4.22

BUGFIX: in the JavaScript, when there are zero groups of line/ribbon
data to display for the current selection, just draw nothing (before
there was an error since the code was written as though there was 1
instead of 0 groups).

2014.4.16

BUGFIX: toJSON gives an infinite recursion error for converting R
functions to JSON, and R functions are sometimes used as ggplot
params/stat_params. But we do not want to pass these to JSON anyway,
so we just ignore them.

2014.4.7

BUGFIX: make_text now works even if it appears before/after certain
other data. See examples/make_text_bug.R

The default/first selection can be specified by an option
first=list(year=1960, country=c("Japan", "United States"). Stop with
an error if multiple values are specified for a single selection
variable.

BUGFIX: Animation now works even for non-numeric variables,
e.g. examples/canada-cities.R.

For animations, start downloading the next chunk for that geom, until
all data is loaded, even if it is not needed on screen right now.

For large data sets such as the scaffold data, breaking the CSV
database from 21 to 94032 CSV files resulted in a 10x increase
in disk space usage (but faster loading of the first data subset),
for 653018 rows of data. Forcing max 1 chunk variable means only
18045 CSV files which is more space/time efficient. Also, plot.json
only stores the chunk ids, not the full filenames (less repetition).
thocking@silene:~/projects/scaffold-viz$ ls boxes-nochunks|grep csv|wc -l
21
thocking@silene:~/projects/scaffold-viz$ ls boxes-fewer-chunks|grep tsv|wc -l
18045